--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,21 @@ jobs:
 
     - name: Compile
       run: make
-
+      
+    - name: Build
+      run: echo ${{ github.sha }} > Release.txt
+      
+    - name: Test
+      run: cat Release.txt
+      
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          DINEOF
+          Release.txt
+          LICENSE
 # build-windows:
 
 #   runs-on: windows-latest
