--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,8 +10,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-#     - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-#     - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+    - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+    - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
     - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
 
     - name: Install dependencies
@@ -23,19 +23,19 @@ jobs:
     - name: Compile
       run: make
       
-    - name: Build
-      run: echo ${{ github.sha }} > Release.txt
+#     - name: Build
+#       run: echo ${{ github.sha }} > Release.txt
       
-    - name: Test
-      run: cat Release.txt
+#     - name: Test
+#       run: cat Release.txt
       
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: |
-          dineof
-          Release.txt
+#     - name: Release
+#       uses: softprops/action-gh-release@v1
+#       if: startsWith(github.ref, 'refs/tags/')
+#       with:
+#         files: |
+#           dineof
+#           Release.txt
           
 # build-windows:
 
