--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,7 +33,7 @@ jobs:
   build-windows:
     runs-on: windows-2019
     steps: 
-      - uses: actions/checkout@v2
+#       - uses: actions/checkout@v2
       
 #       - name: Set up msys2
 #         uses: msys2/setup-msys2@v2
