--- a/config.mk.template
+++ b/config.mk.template
@@ -64,7 +64,7 @@ OPENMP ?= TRUE
 
 #  Activate OFAST
 
-OFAST ?= 
+OFAST ?= TRUE
 
 #==========================================================================
 # Library names and locations
